# kivy_llm_chat

./: README.md  pyproject.toml  requirements.txt
src/: chat_api_connector.py  chat_app.py
